fixed styles in top banner on mobile

--- a/src/components/Toggle/Languages.module.css
+++ b/src/components/Toggle/Languages.module.css
@@ -4,10 +4,10 @@
 }
 .button {
   font-size: 18px;
-  padding-bottom: 2px;
+  padding-bottom: 1px;
   color: var(--text-color);
 }
 .button.active {
   padding-bottom: 0;
-  border-bottom: 2px solid var(--btn-border);
+  border-bottom: 1px solid var(--btn-border);
 }
