--- a/src/components/TopBanner/MainWeather.module.css
+++ b/src/components/TopBanner/MainWeather.module.css
@@ -118,18 +118,23 @@
     font-size: 16px;
   }
 }
-@media (max-width: 382px) {
+@media (max-width: 400px) {
+  .weather-image {
+    width: 120px;
+    height: 120px;
+  }
   .clouds-description {
     margin-bottom: 10px;
   }
+  .temperature {
+    margin-bottom: 10px;
+  }
   .bottom-container {
-    padding: 5px 0 0;
+    padding-top: 10px;
+    flex-direction: column;
+    gap: 15px;
   }
-  .flex {
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
-  }
+
   .calendar-icon {
     margin-bottom: 6px;
   }
